# iroha

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
cmake/: functions.cmake
iroha-cli/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
iroha-cli/impl/: query_response_handler.cpp  transaction_response_handler.cpp
irohad/: CMakeLists.txt
irohad/ametsuchi/: CMakeLists.txt
irohad/ametsuchi/impl/: postgres_wsv_command.cpp  postgres_wsv_query.cpp  storage_impl.cpp  storage_impl.hpp
irohad/api/: CMakeLists.txt  command_service.cpp  command_service.hpp
irohad/consensus/: CMakeLists.txt  chain.cpp  chain.hpp  consensus.cpp  consensus.hpp
irohad/consensus/model/: CMakeLists.txt  abort.cpp  abort.hpp  commit.cpp  commit.hpp  ledger_state.cpp  ledger_state.hpp  message.hpp  peer.cpp  peer.hpp  proposal.cpp  proposal.hpp  signature.cpp  signature.hpp  view.cpp  view.hpp  vote.cpp  vote.hpp
irohad/consensus/role/: CMakeLists.txt  leader.cpp  leader.hpp  member.cpp  member.hpp  proxy_tail.cpp  proxy_tail.hpp  validator.cpp  validator.hpp
irohad/logger/: CMakeLists.txt  logger.cpp  logger.hpp
irohad/logger/connection/: CMakeLists.txt  client.cpp  (+3 more)
irohad/main/: CMakeLists.txt  application.cpp  application.hpp  iroha-main.cpp  server_runner.cpp  server_runner.hpp
irohad/model/: CMakeLists.txt  account.hpp  message.hpp  model_crypto_provider.hpp  model_crypto_provider_impl.cpp  model_crypto_provider_impl.hpp  model_hash_provider_impl.cpp  signature.hpp
irohad/model/converters/: CMakeLists.txt  generic_factory.hpp  json_command_factory.hpp  json_query_factory.hpp  pb_command_factory.hpp  pb_query_factory.hpp  pb_transaction_factory.hpp
irohad/model/converters/impl/: json_command_factory.cpp  json_query_factory.cpp  pb_block_factory.cpp  pb_command_factory.cpp  pb_primitive_factory.cpp  pb_query_factory.cpp  pb_query_response_factory.cpp  pb_transaction_factory.cpp
irohad/model/execution/: command_executor.hpp
irohad/model/execution/impl/: command_executor.cpp
irohad/model/generators/: CMakeLists.txt  query_generator.hpp
irohad/model/generators/impl/: block_generator.cpp  query_generator.cpp  transaction_generator.cpp
irohad/model/impl/: model_operators.cpp
irohad/network/: CMakeLists.txt  consensus_gate.hpp  ordering_gate_transport.hpp  ordering_service_notification.hpp  peer_block_downloader.hpp  sync_client.hpp  sync_gate.hpp
irohad/ordering/: CMakeLists.txt  observer.cpp
irohad/peer_service/: CMakeLists.txt  peer.cpp  peer.hpp  peer_service.cpp  peer_service.hpp  self_state.cpp  self_status.cpp  self_status.hpp
irohad/peer_service/model/: CMakeLists.txt  heartbeat.cpp  heartbeat.hpp
irohad/peer_synchronization/: CMakeLists.txt  peer_synchronization.cpp  peer_synchronization.hpp
irohad/synchronization/: CMakeLists.txt  synchronization.cpp  synchronization.hpp
irohad/torii/: CMakeLists.txt  torii_service_handler.cpp
irohad/validation/: stateless_validator.hpp
libs/: CMakeLists.txt
libs/builder/: CMakeLists.txt  signable.hpp  transaction.cpp  transaction.hpp
libs/builder/basic/: CMakeLists.txt  account_id.cpp  account_id.hpp  amount.cpp  amount.hpp  asset_id.cpp  asset_id.hpp  domain.cpp  domain.hpp
libs/builder/command/: add_asset_quantity.hpp  add_peer.hpp  add_signatory.hpp  command.hpp  create_account.hpp  create_asset.hpp  create_domain.hpp  remove_signatory.hpp  set_account_permissions.hpp  set_account_quorum.hpp  transfer_asset.cpp  transfer_asset.hpp
libs/common/: CMakeLists.txt  byteutils.hpp  comparator.hpp  types.hpp
libs/crypto/: CMakeLists.txt  crypto.hpp  ed25519_impl.cpp  hash.cpp  hash.hpp  lookup3.c  model_crypto.cpp
libs/generator/: generator.cpp
libs/libiroha/: CMakeLists.txt
libs/libiroha/command/: CMakeLists.txt  add_asset_quantity.hpp  add_peer.hpp  add_signatory.hpp  command.hpp  create_account.hpp  create_asset.hpp  create_domain.hpp  remove_signatory.hpp  set_account_permissions.hpp  set_account_quorum.hpp  transfer_asset.cpp  transfer_asset.hpp
schema/: CMakeLists.txt  block.proto  commands.proto  consensus.proto  logger.proto  peer_service.proto  primitive.proto  queries.proto
test/: CMakeLists.txt
test/framework/: test_block_generator.cpp
test/integration/: client_test.cpp
test/libs/: CMakeLists.txt  proto.cpp
(+69 files in other folders)
