message (STATUS "Hi there")

#add_library(transaction_builder
#        transaction.cpp
#        transaction.hpp
#
#        command/command.hpp
#        command/add_asset_quantity.hpp
#        command/add_peer.hpp
#        command/add_signatory.hpp
#        command/create_account.hpp
#        command/create_asset.hpp
#        command/create_domain.hpp
#        command/remove_signatory.hpp
#        command/set_account_permissions.hpp
#        command/set_account_quorum.hpp
#        command/transfer_asset.hpp
#        command/transfer_asset.cpp
#        )
#target_link_libraries(transaction_builder
#        schema
#        )
